--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.cob4yn }}
+          password: ${{ secrets.Spideyman21! }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
