--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -1,4 +1,4 @@
-name: Java Build and Docker Push
+name: Java CI with Docker
 
 on:
   push:
@@ -6,34 +6,28 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  build-java:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v3
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          distribution: 'temurin'
-          java-version: '8'
+          java-version: 1.8
 
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v4
         with:
+          image: parteekbhatia954/test
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: cob4yn/githubactions33:latest
