--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -22,7 +22,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build  # Ensure this step produces the my-app.jar
 
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
@@ -31,3 +31,4 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          dockerfile: Dockerfile  # Ensure Dockerfile points to the correct path if it's not in the root
